<resources>
    <string name="app_name">Dubai Laundry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_home">Home</string>
    <string name="action_ishtirakat">JC Credit</string>
    <string name="action_more">More</string>
    <string name="action_next">Next</string>
    <string name="action_orders">Orders</string>
    <string name="action_profile">Profile</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="action_saved">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">Skip</string>
    <string name="action_support">Support</string>
    <string name="alert_message_basket_body">By going back your basket will be emptied</string>
    <string name="alert_message_cannot_reset_password">Sorry we cannot reset your password this email does not exist</string>
    <string name="alert_message_close_app">Are you sure you want to close the app</string>
    <string name="alert_message_no_address">You have no saved address</string>
    <string name="alert_message_no_orders">You have no orders</string>
    <string name="alert_message_no_saved">Tap the heart on any laundry to start saving your favorite laundries</string>
    <string name="alert_message_password_changed">Password has ben changed successfully</string>
    <string name="alert_message_password_link_sent">Password Link has ben sent please check your email</string>
    <string name="alert_message_title_close_app">Close Application</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachment_download_failed_message">Failed to download. Tap to retry.</string>
    <string name="attachment_open_error_message">"Can't open attachment"</string>
    <string name="attachment_upload_access_error_message">Error accessing file</string>
    <string name="attachment_upload_size_limit_error_message">File size too large</string>
    <string name="attachment_upload_source_camera_button">Take photo</string>
    <string name="attachment_upload_source_gallery_button">Attach photo</string>
    <string name="attachment_upload_type_error_message">File type not permitted</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_dialog_unknown">Unknown</string>
    <string name="belvedere_sample_camera">@string/attachment_upload_source_camera_button</string>
    <string name="belvedere_sample_gallery">@string/attachment_upload_source_gallery_button</string>
    <string name="belvedere_sdk_fpa_suffix">.belvedere.attachments</string>
    <string name="bold">@string/dubai_bold</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btn_add_address">Add New Address</string>
    <string name="btn_add_to_basket">Add to basket</string>
    <string name="btn_buy_now">Buy now</string>
    <string name="btn_call">Call %s</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_check_out">Proceed to checkout</string>
    <string name="btn_confirm_address">Confirm Address</string>
    <string name="btn_date_and_time">Schedule Pickup / Delivery</string>
    <string name="btn_done">Done</string>
    <string name="btn_dry_clean">Dry Clean</string>
    <string name="btn_fast_service">Fast Service</string>
    <string name="btn_fast_sub_text_4_23_hours">4–23 Hours</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_ironing">Ironing</string>
    <string name="btn_later">Later</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_page">Login</string>
    <string name="btn_make_payment">Make Payment</string>
    <string name="btn_my_orders">My Orders</string>
    <string name="btn_next">Next</string>
    <string name="btn_normal_service_sub_text">After 24 Hours</string>
    <string name="btn_pay_ishtirakat">Pay With <b>JC Credit</b></string>
    <string name="btn_place_order">Proceed To Checkout</string>
    <string name="btn_rate_now">Rate now</string>
    <string name="btn_rate_order">Rate Order</string>
    <string name="btn_redeem">Have a promo code? Redeem here</string>
    <string name="btn_redeem_code">redeem code</string>
    <string name="btn_reset_password">Forgot your password?</string>
    <string name="btn_save_address">Save Address</string>
    <string name="btn_show">Show</string>
    <string name="btn_sign_up">Create an account!</string>
    <string name="btn_start_live_chat">Start Live Chat</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_text_normal_service">Normal service</string>
    <string name="btn_track_driver">Track Driver</string>
    <string name="btn_transactions_history">Transactions History</string>
    <string name="btn_update">Update</string>
    <string name="btn_update_address">Update address</string>
    <string name="btn_update_now">Update Now</string>
    <string name="btn_view_all">View all</string>
    <string name="btn_wash_iron">Wash &amp; Iron</string>
    <string name="btn_write_us">Write To Us</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_account_offline_message">There are currently no agents online.</string>
    <string name="chat_activity_title">Chat</string>
    <string name="chat_agent_joined_message">%1$s joined the chat</string>
    <string name="chat_agent_left_message">%1$s left the chat</string>
    <string name="chat_end_dialog_cancel_button">Cancel</string>
    <string name="chat_end_dialog_confirm_button">End</string>
    <string name="chat_end_dialog_message">Your chat session will be closed</string>
    <string name="chat_end_dialog_title">End this chat?</string>
    <string name="chat_ended_message">Chat ended</string>
    <string name="chat_loading_message">Starting chat...</string>
    <string name="chat_menu_end_button">End chat</string>
    <string name="chat_push_chat_ended_body">Your chat with %1$s has ended</string>
    <string name="chat_push_chat_ended_title">Chat ended</string>
    <string name="chat_session_timeout_message">"We've not heard from you for a while so this chat session has been closed. Please start a new chat if you still have questions."</string>
    <string name="chat_visitor_queue_message">Please wait while our agents attend to you. There are currently %1$s visitor(s) waiting to be served.</string>
    <string name="check_icon"></string>
    <string name="com.crashlytics.android.build_id">a1c660f2-aa7e-41fd-b7f3-48557d35e252</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="edt_email">Email</string>
    <string name="edt_hint_code">Code</string>
    <string name="edt_hint_first_name">First name</string>
    <string name="edt_hint_last_name">Last name</string>
    <string name="edt_hint_mobile">Mobile</string>
    <string name="edt_hint_password">Password</string>
    <string name="edt_login_email_hint">Enter your email</string>
    <string name="edt_password_hint">Enter your password</string>
    <string name="light">@string/dubai_light</string>
    <string name="text_contact_help">We are happy to help you!</string>
    <string name="text_contact_message">Our customer service representatives will help you on any query.</string>
    <string name="confirm_password">Confirm Password</string>
</resources>