<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    android:scrollbarSize="1.0dip"
    android:scrollbarStyle="outsideInset"
    android:scrollbarThumbVertical="@color/colorDivider">

    <com.dubai.dubailaundry.helper.ProgressLinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:hint="@string/edt_login_email_hint"
            app:errorTextAppearance="@style/TextLabel.Primary.Error"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel.Primary">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/emailEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_mail_outline"
                android:inputType="textEmailAddress"
                android:theme="@style/TextLabel.Primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/edt_password_hint"
            app:errorTextAppearance="@style/TextLabel.Primary.Error"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextLabel.Primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_lock_outline"
                android:gravity="@integer/gravity"
                android:inputType="textPassword"
                android:theme="@style/TextLabel.Primary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRest"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:padding="16.0dip"
            android:text="@string/btn_reset_password"
            android:textAllCaps="false"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button.Primary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/btn_login_page" />
    </com.dubai.dubailaundry.helper.ProgressLinearLayout>
</ScrollView>